--- a/Home.html
+++ b/Home.html
@@ -79,6 +79,17 @@
        <br><br>
        <H1>What we do ? ?</H1>
        <br><br>
-       
+       <section class="1">
+        <section class="parallax-1">
+            <div class="parallax-inner">
+                <br>
+                <h1>FILMS</h1>
+                <br>
+            </div>
+        </section>
+        </section><br><br>
+        <div class="container3">    
+        <p>Need to Write something about films, emotions and how it connects to the couple and clients Need to Write something about films, emotions and how it connects to the couple and clients, Need to Write something about films, emotions and how it connects to the couple and clients, Need to Write something about films, emotions and how it connects to the couple and clients, Need to Write something about films, emotions and how it connects to the couple and clients.</p>
+        </div>
 </body>
 </html>
