--- a/Home.html
+++ b/Home.html
@@ -45,7 +45,7 @@
           spaceBetween: 30,
           centeredSlides: true,
           autoplay: {
-            delay: 3000,
+            delay: 10000,
             disableOnInteraction: true,
           },
           pagination: {
@@ -90,6 +90,35 @@
         </section><br><br>
         <div class="container3">    
         <p>Need to Write something about films, emotions and how it connects to the couple and clients Need to Write something about films, emotions and how it connects to the couple and clients, Need to Write something about films, emotions and how it connects to the couple and clients, Need to Write something about films, emotions and how it connects to the couple and clients, Need to Write something about films, emotions and how it connects to the couple and clients.</p>
-        </div>
+        </div><br><br>
+       <div class="youtube">
+        <iframe width="450" height="300" src="https://www.youtube.com/embed/UgLCnY6alIk?si=KG5Sa6iRCtIuA1jj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="450" height="300" src="https://www.youtube.com/embed/R1-W5EUrEgE?si=Lb35R1ITtiosJv5I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+       </div><br>
+       <div class="youtube">
+        <iframe width="450" height="315" src="https://www.youtube.com/embed/caOwcKgGWbM?si=Jc_U_xkQ-be-TzhH" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="450" height="315" src="https://www.youtube.com/embed/_t0mP0BX7Sw?si=nF9UfkwSRrjdBLvD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+       </div><br>
+        <div class="youtube">
+          <iframe width="450" height="315" src="https://www.youtube.com/embed/lykmRoF0clA?si=_IDjQ4G9Fj6fmLGe" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <iframe width="450" height="315" src="https://www.youtube.com/embed/BDONICrcWG0?si=9OyN-OqnqbJVe9tI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+       </div><br>
+       <div class="youtube">
+        <iframe width="450" height="315" src="https://www.youtube.com/embed/Amwfr5f5f9Y?si=3-VXlracO-lxbGl6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="450" height="315" src="https://www.youtube.com/embed/oXzzX6IIN4c?si=UeLAJJdrgyfbK5ce" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+       </div>
+       <br><br>
+       <section class="1">
+        <section class="parallax-2">
+            <div class="parallax-inner">
+                <br>
+                <h1>STORIES</h1>
+                <br>
+            </div>
+        </section>
+        </section><br><br>
+        <div class="container3">    
+        <p>Need to Write something about films, emotions and how it connects to the couple and clients Need to Write something about films, emotions and how it connects to the couple and clients, Need to Write something about films, emotions and how it connects to the couple and clients, Need to Write something about films, emotions and how it connects to the couple and clients, Need to Write something about films, emotions and how it connects to the couple and clients.</p>
+        </div><br><br>
 </body>
 </html>
