--- a/Home.html
+++ b/Home.html
@@ -22,7 +22,7 @@
     </nav>    <br><br>    
     <div class="swiper mySwiper">
         <div class="swiper-wrapper">
-          <div class="swiper-slide"><img src="001 (2).jpg" alt=""></div>
+          <div class="swiper-slide"><img src="001.jpg" alt=""></div>
           <div class="swiper-slide"><img src="002 (1).jpg" alt=""></div>
           <div class="swiper-slide"><img src="003.jpg" alt=""></div>
           <div class="swiper-slide"><img src="004.jpg" alt=""></div>
@@ -45,7 +45,7 @@
           spaceBetween: 30,
           centeredSlides: true,
           autoplay: {
-            delay: 10000,
+            delay: 7000,
             disableOnInteraction: true,
           },
           pagination: {
@@ -78,6 +78,24 @@
        </div>
        <br><br>
        <H1>What we do ? ?</H1>
+       <br><br>
+       <div class="container3">
+       <div class="storytelling">
+        <img src="Webiste PNG 1.png" alt="">
+        <h2>STORYTELLING</h2>
+        <p>Every story is unique, and we believe in capturing your emotions, Through storytelling in our work, we love to document the heartfelt moments, in your Every function like Engagement, Wedding & Pre-wedding, Maternity, Toddler & Family Session. Our  visual narrative that reflects your journey, preserving memories you'll cherish for a lifetime. </p>
+       </div>
+       <div class="storytelling">
+        <img src="Website PNG 3.PNG" alt="">
+        <h2>COMMERCIAL</h2>
+        <p>we mean creating imagery that showcases your business at its finest. From highlighting your products to capturing the essence of your services, we focus on delivering visuals that resonate with your audience. We take the time to understand your vision, ensuring every detail aligns with your brand's story. Our goal is to bring your ideas to life with creativity and precision, leaving a lasting impression on your clients.</p>
+       </div>
+       <div class="storytelling">
+        <img src="Webiste PNG 6.png" alt="">
+        <h2>CORPORATE&EVENTS</h2>
+        <p>capturing a wide range of special occasions with precision and creativity. From corporate events, meetings, and inaugurations. Events like Birthday parties, baby showers, and School or college events, we ensure every moment is beautifully documented. Whatever the occasion, we bring professionalism and a keen eye for detail to preserve memories that matter."</p>
+       </div>
+       </div>
        <br><br>
        <section class="1">
         <section class="parallax-1">
