--- a/Home.html
+++ b/Home.html
@@ -138,5 +138,16 @@
         <div class="container3">    
         <p>Need to Write something about films, emotions and how it connects to the couple and clients Need to Write something about films, emotions and how it connects to the couple and clients, Need to Write something about films, emotions and how it connects to the couple and clients, Need to Write something about films, emotions and how it connects to the couple and clients, Need to Write something about films, emotions and how it connects to the couple and clients.</p>
         </div><br><br>
+        <footer>
+          <div class="footer_icon">
+          <img src="FB Logo.png" alt="">
+          <img src="YT Logo.png" alt="">
+          <img src="Instagram Logo.png" alt="">
+          </div><br><br>
+          <p>ALL RIGHT RESERVED 2024 @ PHOTOPHILE PHOTOS & FILMS <br> <br>
+          Email us on : Photophilephotosandfilms@gmail.com <br>
+          Contact Number : +91 9967107339</P>
+          
+        </footer>
 </body>
 </html>
