--- a/Home.html
+++ b/Home.html
@@ -13,11 +13,11 @@
     </div>
     <nav>
         <ul class="link">
-            <li class="links"><a href=#>Home</a></li>
+            <li class="links"><a href="Home.html">Home</a></li>
             <li class="links"><a href=#>Stories</a></li>
             <li class="links"><a href=#>Films</a></li>
             <li class="links"><a href=#>About</a></li>
-            <li class="links"><a href=#>Contact Us</a></li>
+            <li class="links"><a href="contact.html">Contact Us</a></li>
         </ul>
     </nav>    <br><br>    
     <div class="swiper mySwiper">
@@ -72,11 +72,13 @@
           <img class="Ankit" src="549A1214 copy.jpg" alt="">       
         <div class="ankit2"><i>A Man with Many Passions, Passion for Travelling, Music & Photography. Exploring & learning new things. A person Who Never get tired of Clicking Pitcures. Photography, Started as Passion, now it becomes my Profession. Developed & discovered his art & creative site in Photography. I Like to Connect with the People’s Emotions & Stories These are the moments I feel must be preserved. That’s Why I Choosed Wedding, Engagement & Maternity & Baby  Photography. I took little steps which brought Photophile Photography into existence. I did start it alone but now what I have is a beautiful team who strives to offer our clients the best of their memories.</i>
         <div class="ankit3">
-          ( Ankit Mer Founder )
+          ( Ankit Mer - Founder )
         </div>
       </div>
        </div>
        <br><br>
+
+       <!-- what we do -->
        <H1>What we do ? ?</H1>
        <br><br>
        <div class="container3">
@@ -97,6 +99,8 @@
        </div>
        </div>
        <br><br>
+
+       <!-- films -->
        <section class="1">
         <section class="parallax-1">
             <div class="parallax-inner">
@@ -126,6 +130,8 @@
         <iframe width="450" height="315" src="https://www.youtube.com/embed/oXzzX6IIN4c?si=UeLAJJdrgyfbK5ce" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
        </div>
        <br><br>
+
+       <!-- Stories -->
        <section class="1">
         <section class="parallax-2">
             <div class="parallax-inner">
@@ -138,11 +144,64 @@
         <div class="container3">    
         <p>Need to Write something about films, emotions and how it connects to the couple and clients Need to Write something about films, emotions and how it connects to the couple and clients, Need to Write something about films, emotions and how it connects to the couple and clients, Need to Write something about films, emotions and how it connects to the couple and clients, Need to Write something about films, emotions and how it connects to the couple and clients.</p>
         </div><br><br>
+
+        <!-- get in touch -->
+        <div class="container4">
+         <img src="001GIT.jpg" alt="">
+          <div class="form">
+            <h1>GET IN TOUCH </h1>
+            <form action="">
+            <div class="name">
+             <input type="text" required>
+             <label for="">First Name*</label>
+             <input type="text" required>
+             <label for="">Last Name*</label>
+            </div>
+            <div class="phone">
+              <input type="number" required>
+              <label for="">Code*</label>
+              <input type="number" required>
+              <label for="">Phone*</label>
+            </div>
+            <input type="email" required>
+            <label for="">Email</label>             
+            <div class="event">
+              <input type="text" required>
+              <label for="">About the Events*</label>
+              <input type="text" required>
+              <label for="">Location*</label>
+            </div>
+            <input type="text" required>
+            <label for="">Details of all the events, timing, No.of guest*</label>
+            <div class="know">
+              <input type="text" >
+              <label for="">Link to moodboard or reference (if any)</label>
+              <input type="text" required>
+              <label for="">How did you hear about us*</label>
+            </div>
+           <div class="button">
+            <button name="submit" type="submit" id="contact-submit" data-submit="...Sending"><b>Submit</b></button>
+            </div>
+          </form>
+          </div>
+        </div>
+        <!-- <script>
+          $( '.js-input' ).keyup(function() {
+    if( $(this).val() ) {
+       $(this).addClass('not-empty');
+    } else {
+       $(this).removeClass('not-empty');
+    }
+  });
+       </script> -->
+        <br><br>
+
+        <!-- footer -->
         <footer>
           <div class="footer_icon">
-          <img src="FB Logo.png" alt="">
-          <img src="YT Logo.png" alt="">
-          <img src="Instagram Logo.png" alt="">
+          <a href="#"><img class="icon" src="FB Logo.png"alt=""></a>
+          <a href="https://www.youtube.com/@photophile-byankitmer441"><img class="icon" src="YT Logo.png" alt=""></a>
+          <a href="https://www.instagram.com/photophile2.0/"><img class="icon" src="Instagram Logo.png" alt=""></a>
           </div><br><br>
           <p>ALL RIGHT RESERVED 2024 @ PHOTOPHILE PHOTOS & FILMS <br> <br>
           Email us on : Photophilephotosandfilms@gmail.com <br>
