--- a/Home.html
+++ b/Home.html
@@ -148,37 +148,37 @@
         <!-- get in touch -->
         <div class="container4">
          <img src="001GIT.jpg" alt="">
-          <div class="form">
+          <div class="form-section">
             <h1>GET IN TOUCH </h1>
             <form action="">
-            <div class="name">
+            <div class="form-row">
              <input type="text" required>
              <label for="">First Name*</label>
              <input type="text" required>
              <label for="">Last Name*</label>
             </div>
-            <div class="phone">
+            <div class="form-row">
               <input type="number" required>
               <label for="">Code*</label>
-              <input type="number" required>
-              <label for="">Phone*</label>
+              <input type="tel" required>
+                <label for="">Phone*</label>
             </div>
             <input type="email" required>
             <label for="">Email</label>             
-            <div class="event">
+            <div class="form-row">
               <input type="text" required>
               <label for="">About the Events*</label>
               <input type="text" required>
               <label for="">Location*</label>
             </div>
-            <input type="text" required>
+            <textarea name="" id=""></textarea>
             <label for="">Details of all the events, timing, No.of guest*</label>
-            <div class="know">
+            <div class="form-row">
               <input type="text" >
               <label for="">Link to moodboard or reference (if any)</label>
               <input type="text" required>
               <label for="">How did you hear about us*</label>
-            </div>
+            </div><br>
            <div class="button">
             <button name="submit" type="submit" id="contact-submit" data-submit="...Sending"><b>Submit</b></button>
             </div>
