--- a/contact.html
+++ b/contact.html
@@ -4,22 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GET IN TOUCH</title>
-    <link rel="stylesheet" href="contact.css.css">
+    <link rel="stylesheet" href="contact.css">
 </head>
 <body>
     <!-- navigation bar -->
+     <div class="hero">
     <div class="container">
-        <img src="Photophile Logo Brown.png" alt="">
+        <img src="Photophile Logo Brown.png">
         </div>
         <nav>
             <ul class="link">
                 <li class="links"><a href="Home.html">Home</a></li>
                 <li class="links"><a href=#>Stories</a></li>
                 <li class="links"><a href=#>Films</a></li>
-                <li class="links"><a href=#>About</a></li>
+                <li class="links"><a href="aboutus.html">About</a></li>
                 <li class="links"><a href="contact.html">Contact Us</a></li>
             </ul>
-        </nav>    <br><br>   <br><br><br>
+        </nav><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+        <!-- contant -->
+        <div class="text">
+          <div class="contact">
+          <b>C O N T A C T </b>
+          <b>U S</b>
+        </div>
+          <p>YOUR STORY BEGINS HERE</p>
+        </div>
+     </div>    <br><br>   <br><br><br>
+     <div class="text1">
+      <div class="contact">
+      <span>L E T ' S </span>
+      <span>S T A R T</span>
+      <span> Y O U R </span>
+      <span>J O U R N E Y</span>
+      </div>
+      <p>we'd love to hear from you ! feel free to reach out to us using the contact details provided below or simply fill out the form, and we'll get back to you as soon as possible. </p>
+     </div>
         
         <!-- contact -->
    <div class="container4">
@@ -63,9 +83,15 @@
          </div>
    </div><br><br>
 
+   <!-- map -->
+    <div>
+
+    </div>
+
+   <!-- footer -->
    <footer>
     <div class="footer_icon">
-    <a href="#"><img class="icon" src="FB Logo.png"alt=""></a>
+    <a href="https://www.facebook.com/photophile2.O"><img class="icon" src="FB Logo.png"alt=""></a>
     <a href="https://www.youtube.com/@photophile-byankitmer441"><img class="icon" src="YT Logo.png" alt=""></a>
     <a href="https://www.instagram.com/photophile2.0/"><img class="icon" src="Instagram Logo.png" alt=""></a>
     </div><br><br>
