--- a/Home.html
+++ b/Home.html
@@ -16,7 +16,7 @@
             <li class="links"><a href="Home.html">Home</a></li>
             <li class="links"><a href=#>Stories</a></li>
             <li class="links"><a href=#>Films</a></li>
-            <li class="links"><a href=#>About</a></li>
+            <li class="links"><a href="aboutus.html">About</a></li>
             <li class="links"><a href="contact.html">Contact Us</a></li>
         </ul>
     </nav>    <br><br>    
@@ -245,7 +245,7 @@
         <!-- footer -->
         <footer>
           <div class="footer_icon">
-          <a href="#"><img class="icon" src="FB Logo.png"alt=""></a>
+          <a href="https://www.facebook.com/photophile2.O"><img class="icon" src="FB Logo.png"alt=""></a>
           <a href="https://www.youtube.com/@photophile-byankitmer441"><img class="icon" src="YT Logo.png" alt=""></a>
           <a href="https://www.instagram.com/photophile2.0/"><img class="icon" src="Instagram Logo.png" alt=""></a>
           </div><br><br>
