--- a/contact.html
+++ b/contact.html
@@ -83,10 +83,57 @@
          </div>
    </div><br><br>
 
-   <!-- map -->
-    <div>
+   <div class="text">
+    <div class="contact" style="color: #564332; font-size: xx-large;">
+    <p>C O N T A C T </p>
+    <p>U S</p>
+</div> 
+<div class="no">
+  <p>+91 99671 07339</p>
+  <p>photophilephotosandfilms@gmail.com</p>
+</div>
+   </div><br><br><br>
 
-    </div>
+   <!-- map -->
+    <div class="map">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3769.5276692153734!2d72.84945427466643!3d19.128366150327526!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c82aa93ec987%3A0x7916ae2191ffebb5!2sMira%20Building%2C%20RK%20Singh%20Marg%2C%20Saraswati%20Baug%2C%20Sai%20Wadi%2C%20Natwar%20Nagar%2C%20Jogeshwari%20East%2C%20Mumbai%2C%20Maharashtra%20400053!5e0!3m2!1sen!2sin!4v1738229141088!5m2!1sen!2sin" width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <br><p>Andheri, Mumbai, India </p>
+    </div><br><br>
+
+    <!-- question -->
+     <div class="question">
+      <p>F R E Q U E N T L Y</p>
+        <p>A S K E D</p>
+        <p>Q U E S T I O N S</p>
+     </div>
+<br><br><br><br><br>
+     <div class="QA">
+      <div class="QA1">
+      <b>What services does Photophile Photos & films offer?</b>
+      <p>We offers professional photography and videography services, specializing in weddings. We also provide services for portraits, commercial & Event projects, and Maternity, toodler & Family photography.</p>
+
+      <b>What are your rates for photography and videography services?</b>
+      <p>Our packages are totally customized based on your days of events, number of events, guest count, and location. We feel if each wedding film is unique so should their packages be. For more details kindly fill out our contact form or contact us and we will be happy to assist you further.</p>
+
+      <b>How can I book a session with Phootophile Photos & Films?</b>
+      <p>You can book a session by contacting us through our website, email, or phone. Please provide your event date, location, and type of photography/videography you need.</p>
+
+      <b>How far in advance should I book your services?</b>
+      <p>We recommend booking as early as possible to secure your date, especially for weddings and large events. Ideally, bookings should be made at least 8-9 months in advance.</p>
+      </div>
+
+      <div class="QA2">
+        <b>Do you travel for shoots?</b>
+        <p>Yes, we are available for travel. Additional travel costs will apply depending on the location of the shoot.</p>
+
+        <b>How long does it take before we receive our photos and films?</b>
+        <p>Your photographs get ready in 20-25 days after the event coverage. Wedding Films are something which shows best of the moments which are meant to be cherished for a lifetime. We try our best to depict the wedding mood through the films which are processed within 3 months after the wedding.  We also provide an online gallery of your photos which can be easily shared and accessed over phones.</p>
+
+        <b>What is a copyright? Can Photophile photos & films use our images and footage on its social media handles?</b>
+        <p>All original works of art, including photos and video works have a copyright. This means that the creator of an image/video owns the copyright for the same. Hence, Photophile photos & films can use any images/videos on our social media channels for social media posts, marketing and portfolio are a matter of pride for all the clients and vendors involved. If the couple do not want their images/videos to be shared publicly, this has to specified explicitly at the time of signing the contract.</p>
+
+      </div>
+     </div>
 
    <!-- footer -->
    <footer>
