--- a/contact.html
+++ b/contact.html
@@ -48,33 +48,50 @@
          <div class="form-section">
            <h1>GET IN TOUCH </h1><br><br>
            <form action="">
+            <div class="form-row">
+              <label for="">First Name*</label>
+              <label for="">Last Name*</label>
+            </div>
            <div class="form-row">
-            <input type="text" required>
-            <label for="">First Name*</label>
-            <input type="text" required>
-            <label for="">Last Name*</label>
+            <input type="text" required>            
+            <input type="text" required>            
            </div>
+
            <div class="form-row">
-             <input type="number" required>
-             <label for="">Code*</label>
-             <input type="tel" required>
-               <label for="">Phone*</label>
-           </div>
+            <label for="" style="width: 100px;">Code*</label>
+            <label for="" >Phone*</label>           
+          </div>
+           <div class="form-row">
+             <select name="" id="" style="width: 100px;">
+              <option value="">+91</option>
+              <option value="">+91</option>
+              <option value="">+91</option>
+             </select>
+             <input type="tel" required>            
+           </div> 
+
+           <label for="">Email*</label> 
            <input type="email" required>
-           <label for="">Email</label>             
+
+           <div class="form-row">
+            <label for="">About the Events*</label>
+            <label for="">Location*</label>
+          </div>
            <div class="form-row">
              <input type="text" required>
-             <label for="">About the Events*</label>
              <input type="text" required>
-             <label for="">Location*</label>
            </div>
-           <textarea name="" id=""></textarea>
+
            <label for="">Details of all the events, timing, No.of guest*</label>
+           <textarea name="" id=""></textarea>
+           
+           <div class="form-row">
+            <label for="">Link to moodboard or reference (if any)</label>
+            <label for="">How did you hear about us*</label>
+          </div>
            <div class="form-row">
              <input type="text" >
-             <label for="">Link to moodboard or reference (if any)</label>
              <input type="text" required>
-             <label for="">How did you hear about us*</label>
            </div><br><br>
           <div class="button">
            <button name="submit" type="submit" id="contact-submit" data-submit="...Sending"><b>Submit</b></button>
@@ -106,7 +123,7 @@
         <p>A S K E D</p>
         <p>Q U E S T I O N S</p>
      </div>
-<br><br><br><br><br>
+
      <div class="QA">
       <div class="QA1">
       <b>What services does Photophile Photos & films offer?</b>
