--- a/aboutus.html
+++ b/aboutus.html
@@ -9,7 +9,7 @@
 <body>
     <!-- navigation bar -->
     <div class="hero">
-        <div class="container">
+        <div class="container1">
             <img src="Photophile Logo Brown.png" alt="">
             </div>
             <nav>
@@ -21,9 +21,20 @@
                     <li class="links"><a href="contact.html">Contact Us</a></li>
                 </ul>
             </nav>
-         </div><br><br>
+         </div><br><br><br><br><br><br><br><br>
 
-
+         <section>
+            <div class="container">
+                <div class="left"></div>
+                <div class="right"></div>
+            </div>
+            <div style="width: 765px;;">
+            <h1 style="display: flex; justify-content: end; font-family: candara Regular; font-size: 30px; " >About Me</h1>
+            <p style="font-family: candara Regular; font-size: 30px;">A Man with Many Passions: A Passion for Traveling, Music, and Photography. I have always been love to exploring and learning new things, finding inspiration in the beauty of the world and the stories it holds. My journey began with a love for capturing moments through my camera, which started as a passion, has now transformed into my profession. Through this journey, I have discovered my artistic and creative side in photography.</p>
+            <p style="font-family: candara Regular; font-size: 30px;">What drives me the most is the ability to connect with people's emotions and stories. I believe these moments are precious and deserve to be preserved for a lifetime. This belief is what led me to specialize in wedding, engagement, maternity, and baby photography. Each of these events is a celebration of love, life, and the bonds that bring people together. Capturing these milestones is not just a job for me; it's an honor and a responsibility I hold dear.
+            </p>
+            </div>
+          </section>
 
          <!-- footer -->
          <footer>
