--- a/aboutus.html
+++ b/aboutus.html
@@ -10,7 +10,7 @@
     <!-- navigation bar -->
     <div class="hero">
         <div class="container1">
-            <img src="Photophile Logo Brown.png" alt="">
+            <img src="logo/Photophile Logo Brown.png" alt="">
             </div>
             <nav>
                 <ul class="link">
@@ -36,12 +36,20 @@
             </div>
           </section>
 
+          <div class="container2">
+            <div class="text">
+                <p>Photophile, means. "a person who love to click photos". Photophile Photography was born out of this passion and vision. What began as a solo endeavor has now blossomed into a collaborative effort with a beautiful team of like-minded individuals who share the same dedication and commitment. Together, we strive to offer our clients the best of their memories, turning fleeting moments into timeless treasures.</p>
+                <p>Whether it's the joy of a couple starting a new chapter, the anticipation of welcoming a new life, or the innocence and wonder of a child's early years, we aim to capture the essence of these emotions through our lens. At Photophile Photography, we don't just take pictures; we create memories that tell a story—your story—with creativity, passion, and heart.</p>
+            </div>
+            <img class="image" src="ankit/_NKP1425 copy.jpg" alt="">
+          </div><br><br><br><br>
+
          <!-- footer -->
          <footer>
             <div class="footer_icon">
-            <a href="https://www.facebook.com/photophile2.O"><img class="icon" src="FB Logo.png"alt=""></a>
-            <a href="https://www.youtube.com/@photophile-byankitmer441"><img class="icon" src="YT Logo.png" alt=""></a>
-            <a href="https://www.instagram.com/photophile2.0/"><img class="icon" src="Instagram Logo.png" alt=""></a>
+            <a href="https://www.facebook.com/photophile2.O"><img class="icon" src="/logo/FB Logo.png"alt=""></a>
+            <a href="https://www.youtube.com/@photophile-byankitmer441"><img class="icon" src="logo/YT Logo.png" alt=""></a>
+            <a href="https://www.instagram.com/photophile2.0/"><img class="icon" src="logo/Instagram Logo.png" alt=""></a>
             </div><br><br>
             <p>ALL RIGHT RESERVED 2024 @ PHOTOPHILE PHOTOS & FILMS <br> <br>
             Email us on : Photophilephotosandfilms@gmail.com <br>
