--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <!-- navigation bar -->
      <div class="hero">
     <div class="container">
-        <img src="Photophile Logo Brown.png">
+        <img src="logo/Photophile Logo Brown.png">
         </div>
         <nav>
             <ul class="link">
@@ -63,9 +63,24 @@
           </div>
            <div class="form-row">
              <select name="" id="" style="width: 100px;">
-              <option value="">+91</option>
-              <option value="">+91</option>
-              <option value="">+91</option>
+              <option value="">IN +91</option>
+              <option value="">AW +297</option>
+              <option value="">AQ +244</option>
+              <option value="">AF +93</option>
+              <option value="">AF +93</option>
+              <option value="">AI +1</option>
+              <option value="">AX +358</option>
+              <option value="">AL +355</option>
+              <option value="">AD +376</option>
+              <option value="">AE +917</option>
+              <option value="">AR +54</option>
+              <option value="">AM +374</option>
+              <option value="">AS +1684</option>
+              <option value="">AQ +672</option>
+              <option value="">TF +262</option>
+              <option value="">AG +1</option>
+              <option value="">AU +61</option>
+              <option value="">AT +43</option>
              </select>
              <input type="tel" required>            
            </div> 
@@ -155,9 +170,9 @@
    <!-- footer -->
    <footer>
     <div class="footer_icon">
-    <a href="https://www.facebook.com/photophile2.O"><img class="icon" src="FB Logo.png"alt=""></a>
-    <a href="https://www.youtube.com/@photophile-byankitmer441"><img class="icon" src="YT Logo.png" alt=""></a>
-    <a href="https://www.instagram.com/photophile2.0/"><img class="icon" src="Instagram Logo.png" alt=""></a>
+    <a href="https://www.facebook.com/photophile2.O"><img class="icon" src="logo/FB Logo.png"alt=""></a>
+    <a href="https://www.youtube.com/@photophile-byankitmer441"><img class="icon" src="logo/YT Logo.png" alt=""></a>
+    <a href="https://www.instagram.com/photophile2.0/"><img class="icon" src="logo/Instagram Logo.png" alt=""></a>
     </div><br><br>
     <p>ALL RIGHT RESERVED 2024 @ PHOTOPHILE PHOTOS & FILMS <br> <br>
     Email us on : Photophilephotosandfilms@gmail.com <br>
