--- a/Home.html
+++ b/Home.html
@@ -14,7 +14,7 @@
     <nav>
         <ul class="link">
             <li class="links"><a href="Home.html">Home</a></li>
-            <li class="links"><a href=#>Stories</a></li>
+            <li class="links"><a href="stories.html">Stories</a></li>
             <li class="links"><a href=#>Films</a></li>
             <li class="links"><a href="aboutus.html">About</a></li>
             <li class="links"><a href="contact.html">Contact Us</a></li>
@@ -111,34 +111,70 @@
         </section>
         </section><br><br>
         <div class="container3">    
-        <p>Need to Write something about films, emotions and how it connects to the couple and clients Need to Write something about films, emotions and how it connects to the couple and clients, Need to Write something about films, emotions and how it connects to the couple and clients, Need to Write something about films, emotions and how it connects to the couple and clients, Need to Write something about films, emotions and how it connects to the couple and clients.</p>
-        </div><br><br>
+          <p>films are crafted to tell your love story with beauty and heartfelt emotion. From the laughter and tears to the quiet, tender moments, we weave together a narrative that feels as magical as your day. Each film is a unique blend of candid memories, joyful celebrations, and meaningful details, creating a timeless keepsake of your journey.</p>
+o        </div><br><br>
        <div class="marquee-container">
   <div class="marquee-track">
     <div class="marquee-item">
-     <a href=""><img src="flims/07 - NPYT.png" alt=""></a>
+     <a href=""><img src="flims/01 - APYT.png" alt=""></a>
     </div>
     <div class="marquee-item">
-     <a href=""><img src="flims/10 - MRYT.png" alt=""></a>
+     <a href=""><img src="flims/02 - DJYT.png" alt=""></a>
     </div>
     <div class="marquee-item">
-      <a href=""><img src="" alt=""></a>
+      <a href=""><img src="flims/03 - CTYT.png" alt=""></a>
     </div>
     <div class="marquee-item">
-      <a href=""><img src="" alt=""></a>
+      <a href=""><img src="flims/04 - VSYT.png" alt=""></a>
     </div>
     <div class="marquee-item">
-      <a href=""><img src="" alt=""></a>
+      <a href=""><img src="flims/05 - BTYT.png" alt=""></a>
     </div>
     <div class="marquee-item">
-      <a href=""><img src="" alt=""></a>
+      <a href=""><img src="flims/06 - RMYT.png" alt=""></a>
     </div>
     <div class="marquee-item">
-      <a href=""><img src="" alt=""></a>
+      <a href=""><img src="flims/07 - NPYT.png" alt=""></a>
     </div>
     <div class="marquee-item">
-      <a href=""><img src="" alt=""></a>
+      <a href=""><img src="flims/08 - SSYT.png" alt=""></a>
     </div>
+    <div class="marquee-item">
+      <a href=""><img src="flims/09 - PNYT.png" alt=""></a>
+    </div>
+    <div class="marquee-item">
+      <a href=""><img src="flims/10 - MRYT.png" alt=""></a>
+    </div>
+    <div class="marquee-item">
+      <a href=""><img src="flims/01 - APYT.png" alt=""></a>
+     </div>
+     <div class="marquee-item">
+      <a href=""><img src="flims/02 - DJYT.png" alt=""></a>
+     </div>
+     <div class="marquee-item">
+       <a href=""><img src="flims/03 - CTYT.png" alt=""></a>
+     </div>
+     <div class="marquee-item">
+       <a href=""><img src="flims/04 - VSYT.png" alt=""></a>
+     </div>
+     <div class="marquee-item">
+       <a href=""><img src="flims/05 - BTYT.png" alt=""></a>
+     </div>
+     <div class="marquee-item">
+       <a href=""><img src="flims/06 - RMYT.png" alt=""></a>
+     </div>
+     <div class="marquee-item">
+       <a href=""><img src="flims/07 - NPYT.png" alt=""></a>
+     </div>
+     <div class="marquee-item">
+       <a href=""><img src="flims/08 - SSYT.png" alt=""></a>
+     </div>
+     <div class="marquee-item">
+       <a href=""><img src="flims/09 - PNYT.png" alt=""></a>
+     </div>
+     <div class="marquee-item">
+       <a href=""><img src="flims/10 - MRYT.png" alt=""></a>
+     </div>    
   </div>
 </div>
 
@@ -155,7 +191,7 @@
         </section>
         </section><br><br>
         <div class="container3">    
-        <p>Need to Write something about films, emotions and how it connects to the couple and clients Need to Write something about films, emotions and how it connects to the couple and clients, Need to Write something about films, emotions and how it connects to the couple and clients, Need to Write something about films, emotions and how it connects to the couple and clients, Need to Write something about films, emotions and how it connects to the couple and clients.</p>
+          <p>Every story is unique, and we believe in capturing your emotions, Through storytelling in our work, we love to document the heartfelt moments, candid moments, in your Every function like Engagement, wedding & pre-wedding, Maternity, Toddler & Family Session. Our approach is to weave together a visual narrative that reflects your journey, preserving memories you'll cherish for a lifetime.</p>
         </div><br><br>
         <div class="hello1">
           <div class="list" ><img src="contact/001GIT.jpg" alt="">
