--- a/aboutus.html
+++ b/aboutus.html
@@ -15,7 +15,7 @@
             <nav>
                 <ul class="link">
                     <li class="links"><a href="Home.html">Home</a></li>
-                    <li class="links"><a href=#>Stories</a></li>
+                    <li class="links"><a href="stories.html">Stories</a></li>
                     <li class="links"><a href=#>Films</a></li>
                     <li class="links"><a href="aboutus.html">About</a></li>
                     <li class="links"><a href="contact.html">Contact Us</a></li>
