--- a/contact.html
+++ b/contact.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GET IN TOUCH</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="contact.css">
 </head>
 <body>
     <!-- navigation bar -->
      <div class="hero">
     <div class="container">
-        <img src="logo/Photophile Logo Brown.png">
+        <img src="Photophile Logo.png">
         </div>
         <nav>
             <ul class="link">
                 <li class="links"><a href="Home.html">Home</a></li>
-                <li class="links"><a href=#>Stories</a></li>
+                <li class="links"><a href="stories.html">Stories</a></li>
                 <li class="links"><a href=#>Films</a></li>
                 <li class="links"><a href="aboutus.html">About</a></li>
                 <li class="links"><a href="contact.html">Contact Us</a></li>
@@ -30,7 +31,7 @@
         </div>
           <p>YOUR STORY BEGINS HERE</p>
         </div>
-     </div>    <br><br>   <br><br><br>
+     </div>     <br>
      <div class="text1">
       <div class="contact">
       <span>L E T ' S </span>
@@ -40,13 +41,14 @@
       </div>
       <p>we'd love to hear from you ! feel free to reach out to us using the contact details provided below or simply fill out the form, and we'll get back to you as soon as possible. </p>
      </div>
-        
+        <br>
         <!-- contact -->
+        <h1>GET IN TOUCH </h1>
    <div class="container4">
     <div class="slider">
     </div>
          <div class="form-section">
-           <h1>GET IN TOUCH </h1><br><br>
+           <br><br> <br><br>
            <form action="">
             <div class="form-row">
               <label for="">First Name*</label>
@@ -107,7 +109,7 @@
            <div class="form-row">
              <input type="text" >
              <input type="text" required>
-           </div><br><br>
+           </div><br>
           <div class="button">
            <button name="submit" type="submit" id="contact-submit" data-submit="...Sending"><b>Submit</b></button>
            </div>
@@ -121,15 +123,14 @@
     <p>U S</p>
 </div> 
 <div class="no">
-  <p>+91 99671 07339</p>
-  <p>photophilephotosandfilms@gmail.com</p>
+  <p><i class="fa-solid fa-phone"></i> +91 99671 07339</p>
+  <p><i class="fa-solid fa-envelope"></i> photophilephotosandfilms@gmail.com</p>
 </div>
    </div><br><br><br>
 
    <!-- map -->
     <div class="map">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3769.5276692153734!2d72.84945427466643!3d19.128366150327526!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c82aa93ec987%3A0x7916ae2191ffebb5!2sMira%20Building%2C%20RK%20Singh%20Marg%2C%20Saraswati%20Baug%2C%20Sai%20Wadi%2C%20Natwar%20Nagar%2C%20Jogeshwari%20East%2C%20Mumbai%2C%20Maharashtra%20400053!5e0!3m2!1sen!2sin!4v1738229141088!5m2!1sen!2sin" width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-      <br><p>Andheri, Mumbai, India </p>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3769.5124604001817!2d72.84974037466644!3d19.129032650306588!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7b74da7584b0d%3A0xec35462a99ae449d!2sPhotophile%20Photos%20%26%20Films!5e0!3m2!1sen!2sin!4v1740661732180!5m2!1sen!2sin" width="100%" height="550px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>      <br><p>Andheri, Mumbai, India </p>
     </div><br><br>
 
     <!-- question -->
