--- a/contact.html
+++ b/contact.html
@@ -11,17 +11,18 @@
     <!-- navigation bar -->
      <div class="hero">
     <div class="container">
-        <img src="Photophile Logo.png">
+        <img src="logo/Photophile Logo.png">
         </div>
         <nav>
             <ul class="link">
                 <li class="links"><a href="Home.html">Home</a></li>
                 <li class="links"><a href="stories.html">Stories</a></li>
-                <li class="links"><a href=#>Films</a></li>
+                <li class="links"><a href="films.html">Films</a></li>
                 <li class="links"><a href="aboutus.html">About</a></li>
                 <li class="links"><a href="contact.html">Contact Us</a></li>
             </ul>
-        </nav><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        </nav><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br>
 
         <!-- contant -->
         <div class="text">
