--- a/Home.html
+++ b/Home.html
@@ -112,83 +112,64 @@
         </section>
         <div class="container3">    
           <p>films are crafted to tell your love story with beauty and heartfelt emotion. From the laughter and tears to the quiet, tender moments, we weave together a narrative that feels as magical as your day. Each film is a unique blend of candid memories, joyful celebrations, and meaningful details, creating a timeless keepsake of your journey.</p>        </div><br><br>
-       <div class="marquee-container" id="marqueeContainer">
+       <div id="marqueeContainer">
   <div class="marquee" id="marquee">
-     <a href=""><img src="flims/01 - APYT.png" alt=""></a>
-     <a href=""><img src="flims/02 - DJYT.png" alt=""></a>
-      <a href=""><img src="flims/03 - CTYT.png" alt=""></a>
-      <a href=""><img src="flims/04 - VSYT.png" alt=""></a>
-      <a href=""><img src="flims/05 - BTYT.png" alt=""></a>
-      <a href=""><img src="flims/06 - RMYT.png" alt=""></a>
-      <a href=""><img src="flims/07 - NPYT.png" alt=""></a>
-      <a href=""><img src="flims/08 - SSYT.png" alt=""></a>
-      <a href=""><img src="flims/09 - PNYT.png" alt=""></a>
-      <a href=""><img src="flims/10 - MRYT.png" alt=""></a>
-      <a href=""><img src="flims/01 - APYT.png" alt=""></a>
-      <a href=""><img src="flims/02 - DJYT.png" alt=""></a>
-       <a href=""><img src="flims/03 - CTYT.png" alt=""></a>
-       <a href=""><img src="flims/04 - VSYT.png" alt=""></a>
-       <a href=""><img src="flims/05 - BTYT.png" alt=""></a>
-       <a href=""><img src="flims/06 - RMYT.png" alt=""></a>
-       <a href=""><img src="flims/07 - NPYT.png" alt=""></a>
-       <a href=""><img src="flims/08 - SSYT.png" alt=""></a>
-       <a href=""><img src="flims/09 - PNYT.png" alt=""></a>
-       <a href=""><img src="flims/10 - MRYT.png" alt=""></a>
+      <img src="flims/01 - APYT.png" data-link="https://www.youtube.com/embed/BDONICrcWG0?si=V_YFgRuYC8IjvvUo">
+      <img src="flims/02 - DJYT.png" data-link="https://www.youtube.com/embed/UgLCnY6alIk?si=TPjpJyZxhdRh4ARZ">
+      <img src="flims/03 - CTYT.png" data-link="https://www.youtube.com/embed/R1-W5EUrEgE?si=Cddmv4NWgdVBh4gX">
+      <img src="flims/04 - VSYT.png" data-link="https://www.youtube.com/embed/lykmRoF0clA?si=-vRc_oY1QxWTrfbx">
+      <img src="flims/05 - BTYT.png" data-link="https://www.youtube.com/embed/caOwcKgGWbM?si=7zgcrYa1lrtY38iP">
+      <img src="flims/06 - RMYT.png" data-link="https://www.youtube.com/embed/_t0mP0BX7Sw?si=QrmFpcFK2P687fsa">
+      <img src="flims/07 - NPYT.png" data-link="https://www.youtube.com/embed/QUf8UFYkSt4?si=UnwuLLieuzJaGazq">
+      <img src="flims/08 - SSYT.png" data-link="https://www.youtube.com/embed/wP3h3PHlO_4?si=EUO3Wa8i1i8jl42_">
+      <img src="flims/09 - PNYT.png" data-link="https://www.youtube.com/embed/Amwfr5f5f9Y?si=79basn_AghEPJXG8">
+      <img src="flims/10 - MRYT.png" data-link="https://www.youtube.com/embed/VVOcazyNRKE?si=uz4IlLWOl_q59DhA">
+      <img src="flims/01 - APYT.png" data-link="https://www.youtube.com/embed/BDONICrcWG0?si=V_YFgRuYC8IjvvUo">
+      <img src="flims/02 - DJYT.png" data-link="https://www.youtube.com/embed/UgLCnY6alIk?si=TPjpJyZxhdRh4ARZ">
+      <img src="flims/03 - CTYT.png" data-link="https://www.youtube.com/embed/R1-W5EUrEgE?si=Cddmv4NWgdVBh4gX">
+      <img src="flims/04 - VSYT.png" data-link="https://www.youtube.com/embed/lykmRoF0clA?si=-vRc_oY1QxWTrfbx">
+      <img src="flims/05 - BTYT.png" data-link="https://www.youtube.com/embed/caOwcKgGWbM?si=7zgcrYa1lrtY38iP">
+      <img src="flims/06 - RMYT.png" data-link="https://www.youtube.com/embed/_t0mP0BX7Sw?si=QrmFpcFK2P687fsa">
+      <img src="flims/07 - NPYT.png" data-link="https://www.youtube.com/embed/QUf8UFYkSt4?si=UnwuLLieuzJaGazq">
+      <img src="flims/08 - SSYT.png" data-link="https://www.youtube.com/embed/wP3h3PHlO_4?si=EUO3Wa8i1i8jl42_">
+      <img src="flims/09 - PNYT.png" data-link="https://www.youtube.com/embed/Amwfr5f5f9Y?si=79basn_AghEPJXG8">
+      <img src="flims/10 - MRYT.png" data-link="https://www.youtube.com/embed/VVOcazyNRKE?si=uz4IlLWOl_q59DhA"> 
   </div>
 </div>
 <div class="fullscreen-overlay" id="fullscreenOverlay">
+  <div class="iframe-wrapper">
+    <iframe id="fullscreenIframe" src="" frameborder="0" allowfullscreen allow="autoplay; encrypted-media"></iframe>
+  </div>
   <button id="closeBtn">⬅ Back</button>
-  <iframe id="fullscreenIframe" height="500px" src="" frameborder="0"></iframe>
 </div>
 
+
 <script>
- const marquee = document.getElementById('marquee');
-const container = document.getElementById('marqueeContainer');
-const overlay = document.getElementById('fullscreenOverlay');
-const iframe = document.getElementById('fullscreenIframe');
-const closeBtn = document.getElementById('closeBtn');
-
-// Pause marquee on hover
-container.addEventListener('mouseenter', () => marquee.classList.add('paused'));
-container.addEventListener('mouseleave', () => marquee.classList.remove('paused'));
-
-// Click image to show fullscreen iframe
-document.querySelectorAll('.marquee img').forEach(img => {
-  img.addEventListener('click', () => {
-    const link = img.getAttribute('data-link');
-    iframe.src = link;
-    overlay.style.display = 'flex';
+  const marquee = document.getElementById('marquee');
+  const container = document.getElementById('marqueeContainer');
+  const overlay = document.getElementById('fullscreenOverlay');
+  const iframe = document.getElementById('fullscreenIframe');
+  const closeBtn = document.getElementById('closeBtn');
+  
+  // Pause marquee on hover (optional, if you’re using a CSS marquee animation)
+  container.addEventListener('mouseenter', () => marquee.classList.add('paused'));
+  container.addEventListener('mouseleave', () => marquee.classList.remove('paused'));
+  
+  // Click on any image in the marquee
+  document.querySelectorAll('.marquee img').forEach(img => {
+    img.addEventListener('click', () => {
+      const link = img.getAttribute('data-link');
+      iframe.src = link + "?autoplay=1"; // Autoplay when opened
+      overlay.style.display = 'flex';
+    });
   });
-});
-
-// Close button to go back
-closeBtn.addEventListener('click', () => {
-  iframe.src = '';
-  overlay.style.display = 'none';
-});
-
-// Optional: Allow dragging marquee
-let isDown = false;
-let startX;
-let scrollLeft;
-
-container.addEventListener('mousedown', (e) => {
-  isDown = true;
-  startX = e.pageX - container.offsetLeft;
-  scrollLeft = container.scrollLeft;
-});
-
-container.addEventListener('mouseleave', () => isDown = false);
-container.addEventListener('mouseup', () => isDown = false);
-container.addEventListener('mousemove', (e) => {
-  if (!isDown) return;
-  e.preventDefault();
-  const x = e.pageX - container.offsetLeft;
-  const walk = (x - startX) * 2;
-  container.scrollLeft = scrollLeft - walk;
-});
-
-</script>
+  
+  // Close fullscreen and stop video
+  closeBtn.addEventListener('click', () => {
+    iframe.src = ""; // Reset iframe
+    overlay.style.display = 'none';
+  });
+  </script>  
 
        <br><br>
 
@@ -246,7 +227,7 @@ container.addEventListener('mousemove', (e) => {
         <script>
           const sliderData = [
             {
-              video: "testimonial/001.mp4",
+              video: "001.mp4",
               heading: "AKSHAY - POOJA",
               text: "Two friends shared laughter and dreams, their bond growing deeper over time. One day, they realized their connection was more than friendship—it was love. From that moment, they became soulmates, building a life filled with trust and shared dreams, rooted in their beautiful friendship."
             },
